# pocketboot

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/: Dockerfile
.github/workflows/: ci-image.yml  ci.yml  kernel-ci.generated.yml
configs/: pocketboot.config  pocketboot.toml
configs/bootimg/exynos/: exynos7870-j7xelte.toml
configs/bootimg/qcom/: msm8916-samsung-a5u-eur.toml  msm8916-samsung-gt510.toml  sdm670-google-sargo.toml  sdm845-oneplus-fajita.toml
configs/device/exynos/: exynos7870-j7xelte.config  exynos7870-j7xelte.toml
configs/device/qcom/: apq8016-sbc.config  apq8016-sbc.toml  msm8916-samsung-a5u-eur.config  msm8916-samsung-a5u-eur.toml  msm8916-samsung-gt510.config  msm8916-samsung-gt510.toml  msm8926-sony-xperia-yukon-eagle.toml  msm8930-samsung-expressltexx.toml  msm8953-xiaomi-daisy.config  msm8953-xiaomi-daisy.toml  sdm670-google-sargo.config  sdm670-google-sargo.toml  sdm845-google-crosshatch.toml  sdm845-oneplus-enchilada.toml  sdm845-oneplus-fajita.config  sdm845-oneplus-fajita.toml  sdm845-xiaomi-beryllium-ebbg.toml
configs/device/qemu/: aarch64-virt.config  aarch64-virt.toml
configs/dt-overlays/qcom/: msm8916-samsung-a5u-eur.dtso  msm8916-samsung-gt510.dtso  sdm845-google-crosshatch.dtso  sdm845-oneplus-fajita.dtso
configs/dtbo-masks/qcom/: sdm845-google-crosshatch.toml
configs/qemu/: aarch64-virt.config
configs/soc/exynos/: exynos7870.config  exynos7870.toml
configs/soc/qcom/: apq8016.config  apq8016.toml  msm8916.config  msm8916.toml  msm8926.toml  msm8930.toml  msm8953.config  msm8953.toml  sdm670.config  sdm670.toml  sdm845.config  sdm845.toml
configs/soc/qemu/: aarch64.config  aarch64.toml
docs/: a5u-msm-drm-evidence-2026-07-22.md  a5u-msm-drm-lab.md  crosshatch-drm-lab.md  crosshatch-msm-drm-evidence-2026-07-20.md  mesh.md
docs/attic/: README.md
docs/attic/crosshatch-stockos-chainload-2026-07/: README.md
docs/attic/crosshatch-stockos-chainload-2026-07/evidence/: 2026-07-13-lz4-rejection.txt  2026-07-14-kexec-watchdog-reset.txt  README.md  SHA256SUMS
pocketpreboot/: Cargo.toml  build.rs  linker.ld
pocketpreboot/src/: exynos7870.rs  main.rs  start.S
qbootctl/: Cargo.toml
qbootctl/src/: lib.rs
src/: ab_slots.rs  adb.rs  android_lp.rs  battery.rs  boot_state.rs  bootflow.rs  cmdline.rs  firmware.rs  gadget.rs  getty.rs  kexec.rs  kmsg-forwarder.rs  kmsg.rs  main.rs  mesh.rs  modules.rs  partitions.rs  pe.rs  power.rs  qemu.rs  reaper.rs  runtime.rs  settle.rs  ui.rs  zboot.rs
src/fastboot/: mod.rs
src/fastboot/commands/: boot.rs  cat.rs  dmesg.rs  flash.rs  getvar.rs  mod.rs  partitions.rs  reboot.rs  shell.rs  slots.rs  ums.rs
src/mesh/: address.rs  babel.rs  command.rs  identity.rs  link.rs  status.rs  usb.rs  wifi_p2p.rs
tools/: a5u_msm_drm_lab.py  crosshatch_drm_lab.py
tools/tests/: test_a5u_msm_drm_lab.py  test_crosshatch_drm_lab.py
ui/: main.slint
ui/fonts/: FreeSans.ttf.license
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/commands/: bootimg.rs  build.rs  busybox.rs  ci_matrix.rs  ci_workflows.rs  config.rs  cpio.rs  kernel.rs  kernel_matrix.rs  kernel_prime.rs  kernel_src.rs  mod.rs  podman.rs  preboot.rs  qemu.rs
