[workspace]
members = [".", "xtask"]
resolver = "3"

[package]
name = "pocketboot"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
abootimg-oxide = "0.5.1"
drm = "0.14.1"
flate2 = "1"
gadgetry-most-foul = "0.1.1"
libc = "0.2.177"
rustix = { version = "1", features = ["termios"] }
slint = { version = "1.16.1", default-features = false, features = ["compat-1-2", "libm", "renderer-software", "unsafe-single-threaded"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "registry", "std"] }

[features]
default = []
busybox = []
qemu = []

[build-dependencies]
slint-build = "1.16.1"

[patch.crates-io]
abootimg-oxide = { git = "https://github.com/samcday/abootimg-oxide.git", branch = "master" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = "symbols"
