[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
abootimg-oxide = { version = "0.5.1", features = ["hash"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.11"
sha2 = "0.10"
toml = "0.8"
